--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>MY Portfolio</title>
 </head>
 <body>
@@ -20,8 +21,8 @@
                     <li><a href="#" class="imgAddr"><img id="navImg" src="./Cinna.jpg" alt="myPhoto" width="60px" height="50px"></a></li>
                     <li><a href="#">Home</a></li>
                     <li><a href="./projectPage/projects.html">Projects</a></li>
-                    <li><a href="./contactPage/contact.html">Contact Me</a></li>
-                    <li class="sidebarBtn openSideBar"><span class=" topNavBarMenuBtn material-symbols-outlined">menu</span></li>
+                    <li><a href="#contact">Contact Me</a></li>
+                    <li class="sidebarBtn openSideBar"><span class="topNavBarMenuBtn material-symbols-outlined">menu</span></li>
                 </ul>
                 <button class="menuIconBtn openSideBar">
                     <span class="menuBtn material-symbols-outlined">menu</span>
@@ -40,14 +41,11 @@
                         <li id="closeBtn"><span class="material-symbols-outlined closeBtn">close</span></li>
                         <li class="sideBarLst"><a href="#">Home</a></li>
                         <li class="sideBarLst"><a href="./projectPage/projects.html">Projects</a></li>
-                        <li class="sideBarLst"><a href="./contactPage/contact.html">Contact Me</a></li>
+                        <li class="sideBarLst"><a href="#contact">Contact Me</a></li>
                         <li class="sideBarLst"><a id="googleLink" href="https://www.google.com" target="_blank">Go to Google</a></li>
                         <li class="sideBarLst"><a href="https://www.youtube.com/">Go to Youtube</a></li>
                     </ul>
                     <div class="social-icons">
-                        <!-- <i class="ri-mail-line sideBarSocialIcon sidebarIconAnimate"></i>
-                        <i class="ri-linkedin-box-line sideBarSocialIcon sidebarIconAnimate"></i>
-                        <i class="ri-github-fill sideBarSocialIcon sidebarIconAnimate"></i> -->
                         <button class="sideBarSocialIcon sidebarIconAnimate emailBtn"><i class="ri-mail-line social-icon iconAnimate"></i></button>
                         <a href="https://github.com/Michelle-mm" class="sideBarSocialIcon sidebarIconAnimate"><i class="ri-linkedin-box-line sideBarSocialIcon sidebarIconAnimate"></i></a>
                         <a href="https://github.com/Michelle-mm" class="sideBarSocialIcon sidebarIconAnimate"><i class="ri-github-fill "></i></a>
@@ -71,14 +69,11 @@
                             </p>
                         </div>
                         <div class="social-icons social-iconsTransition">
-                            <!-- <i class="ri-file-copy-line"></i> -->
                             <button class="social-icon iconAnimate emailBtn"><i class="ri-mail-line social-icon iconAnimate"></i></button>
                             <a href="https://github.com/Michelle-mm" class="social-icon iconAnimate"><i class="ri-linkedin-box-line social-icon iconAnimate"></i></a>
                             <a href="https://github.com/Michelle-mm" class="social-icon iconAnimate"><i class="ri-github-fill "></i></a>
+                            <button class="resumeBtn">Resume</button>
                         </div>  
-                        <!-- <div class="confirmCopyBox">
-                            <p>COPIED!<i class="ri-checkbox-circle-line checkIcon"></i></p>
-                        </div> -->
                     </div>
                     <div class="topImg">
                         <div class="squares">
@@ -92,13 +87,11 @@
                                 </i>
                             </div>
                         </div>
-                            <!-- <div class="computerShape">&lt;/&gt;</div> -->
                     </div>
                 </div>
                 <div class="about">
                     <h2>About Me</h2>
                     <div class="aboutSec edu">
-                        <!-- <i class="ri-graduation-cap-fill"></i> -->
                         <p class="aboutHeader">Education:</p>
                         <p class="aboutContent">Yuan Ze University ---- 06/2023</p>
                     </div>
@@ -148,12 +141,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="contact">
-                    <!-- <div class="comment">
-                        <h2>Contact Me</h2>
-                        <input type="text" class="commentBox" placeholder="comments">
-                        <button type="button" class="commentBtn">Send</button>
-                    </div> -->
+                <div class="contact" id="contact">
+                    <h2>Contact Me: </h2>
+                    <p>Big welcome to contact me through the following informations <br>if you're willing to hire me.</p>
+                    <hr style="width: 95%; margin: 0.5rem auto;">
+                    <ul class="contactLst">
+                        <li><i class="fa fa-phone social-icon" style="font-size: 1.3rem; margin: 0 6px 0 2px;"></i>Phone: (+886) 0975733912</li>
+                        <li><i class="ri-mail-line social-icon"></i>Email: rilakkuma71945@gmail.com</li>
+                        <li><i class="ri-github-fill social-icon"></i> Github: <a href="https://github.com/Michelle-mm">Michelle-mm</a></li>
+                        <li><i class="ri-linkedin-box-line social-icon"></i>LinkedIn: <a href="https://github.com/Michelle-mm"></a></li>
+                    </ul>
                 </div>
                 <div class="mainBottom copyrightBG">
                     <p class="copyright">&lt;&lt;&lt; &copy; Michelle &gt;&gt;&gt;</p>
