--- a/contactPage/contact.html
+++ b/contactPage/contact.html
@@ -42,7 +42,7 @@
                 </ul>
                 <div class="social-icons">
                     <button class="sideBarSocialIcon emailBtn"><i class="ri-mail-line"></i></button>
-                    <a href="https://github.com/Michelle-mm" class="sideBarSocialIcon"><i class="ri-linkedin-box-line"></i></a>
+                    <a href="www.linkedin.com/in/思辰-葉-47068830a" class="sideBarSocialIcon"><i class="ri-linkedin-box-line"></i></a>
                     <a href="https://github.com/Michelle-mm" class="sideBarSocialIcon"><i class="ri-github-fill "></i></a>
                 </div> 
             </div>
@@ -64,7 +64,7 @@
                 </p>
                 <div class="social-icons social-iconsTransition">
                     <button class="social-icon iconAnimate emailBtn"><i class="ri-mail-line social-icon iconAnimate"></i></button>
-                    <a href="https://github.com/Michelle-mm" class="social-icon iconAnimate"><i class="ri-linkedin-box-line social-icon iconAnimate"></i></a>
+                    <a href="www.linkedin.com/in/思辰-葉-47068830a" class="social-icon iconAnimate"><i class="ri-linkedin-box-line social-icon iconAnimate"></i></a>
                     <a href="https://github.com/Michelle-mm" class="social-icon iconAnimate"><i class="ri-github-fill "></i></a>
                 </div> 
             </div>
