update projects, images, links. organize code

--- a/contactPage(no_use)/contact.html
+++ b/contactPage(no_use)/contact.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="topNav">
             <ul class="topNavBar">
-                <li><a href="../index.html" class="imgAddr"><img id="navImg" src="../Cinna.jpg" alt="myPhoto" width="60px" height="50px"></a></li>
+                <li><a href="../index.html" class="imgAddr"><img id="navImg" src="../imgs/Cinna.jpg" alt="myPhoto" width="60px" height="50px"></a></li>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../projectPage/projects.html">Projects</a></li>
                 <li><a href="#">Contact Me</a></li>
@@ -29,8 +29,10 @@
         <nav class="sideNav">
             <div class="sideBarContainer">
                 <div class="webTitle">
-                    <h3>Portfolio</h3>
-                    <p>By MichelleYeh</p>
+                    <a href="../index.html">
+                        <h3>Portfolio</h3>
+                        <p>By MichelleYeh</p>
+                    </a>
                 </div>
                 <ul class="sideBar">
                     <li id="closeBtn"><span class="material-symbols-outlined closeBtn">close</span></li>
