--- a/projectPage/projects.html
+++ b/projectPage/projects.html
@@ -15,7 +15,7 @@
         <header>
             <nav class="topNav">
                 <ul class="topNavBar">
-                    <li><a href="../index.html" class="imgAddr"><img id="navImg" src="../Cinna.jpg" alt="myPhoto" width="60px" height="50px"></a></li>
+                    <li><a href="../index.html" class="imgAddr"><img id="navImg" src="../imgs/Cinna.jpg" alt="myPhoto" width="60px" height="50px"></a></li>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="#">Projects</a></li>
                     <li><a href="../index.html#contact">Contact Me</a></li>
@@ -24,11 +24,16 @@
             </nav>
         </header>
         <main>
+            <div class="confirmCopyBox">
+                <p>COPIED!<i class="ri-checkbox-circle-line checkIcon"></i></p>
+            </div>
             <nav class="sideNav">
                 <div class="sideBarContainer">
                     <div class="webTitle">
-                        <h3>Portfolio</h3>
-                        <p>By MichelleYeh</p>
+                        <a href="../index.html">
+                            <h3>Portfolio</h3>
+                            <p>By MichelleYeh</p>
+                        </a>
                     </div>
                     <ul class="sideBar">
                         <li id="closeBtn"><span class="material-symbols-outlined closeBtn">close</span></li>
@@ -47,9 +52,6 @@
             </nav>
             <section class="projectsContainer">
                 <div class="heading">
-                    <div class="confirmCopyBox">
-                        <p>COPIED!<i class="ri-checkbox-circle-line checkIcon"></i></p>
-                    </div>
                     <h1>My Projects:</h1>
                     <button class="menuIconBtn openSideBar">
                         <i class="menuBtn ri-menu-line"></i>
@@ -59,26 +61,26 @@
                     <div class="project">
                         <h3 class="projectTitle"><a href="https://github.com/Michelle-mm/dashboard">Admin Dashboard</a></h3>
                         <p class="projectDetail">A e-commerce platform interface includes different tables, and three extra functions.</p>
-                        <div class="projectImg"></div>
+                        <div class="projectImgBox"><a href="https://github.com/Michelle-mm/dashboard"><img class="projectImg" src="../imgs/dashboard1.JPG" width="180px" height="120px"/></a></div>
                     </div>
                     <div class="project">
                         <h3 class="projectTitle"><a href="https://github.com/Michelle-mm/meme_generator">Meme Generator</a></h3>
                         <p class="projectDetail">A meme generator that could type in custom texts.</p>
-                        <div class="projectImg"></div>
+                        <div class="projectImgBox"><a href="https://github.com/Michelle-mm/meme_generator"><img class="projectImg" src="../imgs//memeGenerator.JPG" width="180px" height="120px"/></a></div>
                     </div>
-                    <div class="project">
+                    <div class="project projectNote">
                         <h3 class="projectTitle">
                             <a href="https://github.com/Michelle-mm/Note_APP">Note App</a>
                         </h3>
                         <p class="projectDetail">A simple note app that includes basic functions, create and delete notes, notes ordering by update-date, etc.</p>
-                        <div class="projectImg"></div>
+                        <div class="projectImgBox"><a href="https://github.com/Michelle-mm/Note_APP"><img class="projectImg" src="../imgs//noteapp2.JPG" width="180px" height="120px"/></a></div>
                     </div>
                     <div class="project">
                         <h3 class="projectTitle">
                             <a href="https://github.com/Michelle-mm/movieAPI_miniProject">Movie Searching App</a>
                         </h3>
                         <p class="projectDetail">A dynamic movie searching app.</p>
-                        <div class="projectImg"></div>
+                        <div class="projectImgBox"><a href="https://github.com/Michelle-mm/movieAPI_miniProject"><img class="projectImg" src="../imgs//movieApi.JPG" width="180px" height="120px"/></a></div>
                     </div>
                     <div class="project addNewProject">
                         <h3 class="projectTitle">
