--- a/projectPage/projects.html
+++ b/projectPage/projects.html
@@ -45,7 +45,7 @@
                     </ul>
                     <div class="social-icons">
                         <button class="sideBarSocialIcon emailBtn"><i class="ri-mail-line"></i></button>
-                        <a href="www.linkedin.com/in/思辰-葉-47068830a" class="sideBarSocialIcon"><i class="ri-linkedin-box-line"></i></a>
+                        <a href="https://www.linkedin.com/in/%E6%80%9D%E8%BE%B0-%E8%91%89-47068830a/" class="sideBarSocialIcon"><i class="ri-linkedin-box-line"></i></a>
                         <a href="https://github.com/Michelle-mm" class="sideBarSocialIcon"><i class="ri-github-fill "></i></a>
                     </div> 
                 </div>
