fix styling, update resume&logo

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./imgs/mylogo.jpeg" type="image">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./sidebar.css">
     <link rel="stylesheet" href="./topNavbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <title>MY Portfolio</title>
 </head>
 <body>
@@ -64,7 +65,7 @@
                     <div class="topContent">
                         <div class="topText">
                             <h2 class="text text-transition">Hello!</h2>
-                            <h2 class="text text-transition">I'm Michelle, a Web Developer</h2>
+                            <h2 class="text text-transition">I'm Michelle, <span>a Web Developer.</span></h2>
                             <p class="text text-transition">I'm a passionate junior front-end developer 
                                 specializing in creating responsive and user-friendly web interfaces.
                             </p>
@@ -112,7 +113,14 @@
                             with Deep Learning and traditional Image Recognition
                         </p>
                     </div>
-                    
+                    <div class="aboutSec skills">
+                        <p class="aboutHeader">Programming Skills:</p>
+                        <ul class="aboutContent">
+                            <li class="skillLst"><i class="fa-brands fa-python"></i>Python</li>
+                            <li class="skillLst"><i class="fa-brands fa-js"></i>JavaScript, <i class="fa-brands fa-react"></i>React.js</li>
+                            <li class="skillLst"><i class="fa-brands fa-html5"></i>HTML, <i class="fa-brands fa-css3"></i>CSS</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="projectBG">
                     <div class="projectsSection">
@@ -147,7 +155,7 @@
                     <p>Big welcome to contact me through the following informations <br>if you're willing to hire me.</p>
                     <hr style="width: 95%; margin: 0.5rem auto;">
                     <ul class="contactLst">
-                        <li><i class="fa fa-phone social-icon" style="font-size: 1.3rem; margin: 0 6px 0 2px;"></i>Phone: (+886) 0975733912</li>
+                        <li><i class="fa fa-phone social-icon" style="font-size: 1.3rem; margin: 0 3px 0 0;"></i>Phone: (+886) 0975733912</li>
                         <li><i class="ri-mail-line social-icon"></i><span class="emailBtn" style="cursor: pointer;">Email: rilakkuma71945@gmail.com</span></li>
                         <li><i class="ri-github-fill social-icon"></i> Github: <a href="https://github.com/Michelle-mm">Michelle-mm</a></li>
                         <li><i class="ri-linkedin-box-line social-icon"></i>LinkedIn <a href="https://www.linkedin.com/in/%E6%80%9D%E8%BE%B0-%E8%91%89-47068830a/">葉思辰MichelleYeh</a></li>
