add split app, update logo

--- a/contactPage(no_use)/contact.html
+++ b/contactPage(no_use)/contact.html
@@ -44,7 +44,7 @@
                 </ul>
                 <div class="social-icons">
                     <button class="sideBarSocialIcon emailBtn"><i class="ri-mail-line"></i></button>
-                    <a href="https://www.linkedin.com/in/%E6%80%9D%E8%BE%B0-%E8%91%89-47068830a/" class="sideBarSocialIcon"><i class="ri-linkedin-box-line"></i></a>
+                    <a href="https://www.linkedin.com/in/%E6%80%9D%E8%BE%B0-%E8%91%89-485066319/" class="sideBarSocialIcon"><i class="ri-linkedin-box-line"></i></a>
                     <a href="https://github.com/Michelle-mm" class="sideBarSocialIcon"><i class="ri-github-fill "></i></a>
                 </div> 
             </div>
@@ -66,7 +66,7 @@
                 </p>
                 <div class="social-icons social-iconsTransition">
                     <button class="social-icon iconAnimate emailBtn"><i class="ri-mail-line social-icon iconAnimate"></i></button>
-                    <a href="www.linkedin.com/in/思辰-葉-47068830a" class="social-icon iconAnimate"><i class="ri-linkedin-box-line social-icon iconAnimate"></i></a>
+                    <a href="https://www.linkedin.com/in/%E6%80%9D%E8%BE%B0-%E8%91%89-485066319/" class="social-icon iconAnimate"><i class="ri-linkedin-box-line social-icon iconAnimate"></i></a>
                     <a href="https://github.com/Michelle-mm" class="social-icon iconAnimate"><i class="ri-github-fill "></i></a>
                 </div> 
             </div>
