--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </ul>
                     <div class="social-icons">
                         <button class="sideBarSocialIcon sidebarIconAnimate emailBtn"><i class="ri-mail-line social-icon iconAnimate"></i></button>
-                        <a href="https://www.linkedin.com/in/%E6%80%9D%E8%BE%B0-%E8%91%89-47068830a/" class="sideBarSocialIcon sidebarIconAnimate"><i class="ri-linkedin-box-line sideBarSocialIcon sidebarIconAnimate"></i></a>
+                        <a href="https://www.linkedin.com/in/%E6%80%9D%E8%BE%B0-%E8%91%89-485066319/" class="sideBarSocialIcon sidebarIconAnimate"><i class="ri-linkedin-box-line sideBarSocialIcon sidebarIconAnimate"></i></a>
                         <a href="https://github.com/Michelle-mm" class="sideBarSocialIcon sidebarIconAnimate"><i class="ri-github-fill "></i></a>
                     </div> 
                 </div>
@@ -72,7 +72,7 @@
                         </div>
                         <div class="social-icons social-iconsTransition">
                             <button class="social-icon iconAnimate emailBtn"><i class="ri-mail-line social-icon iconAnimate"></i></button>
-                            <a href="https://www.linkedin.com/in/%E6%80%9D%E8%BE%B0-%E8%91%89-47068830a/" class="social-icon iconAnimate"><i class="ri-linkedin-box-line social-icon iconAnimate"></i></a>
+                            <a href="https://www.linkedin.com/in/%E6%80%9D%E8%BE%B0-%E8%91%89-485066319/" class="social-icon iconAnimate"><i class="ri-linkedin-box-line social-icon iconAnimate"></i></a>
                             <a href="https://github.com/Michelle-mm" class="social-icon iconAnimate"><i class="ri-github-fill "></i></a>
                             <button class="resumeBtn">Resume</button>
                         </div>  
@@ -128,22 +128,22 @@
                         <p>Here are my projects</p>
                         <div class="projectBoxs">
                             <div class="projectBox projectBox-transition">
-                                <i class="ri-shopping-bag-4-line"></i>
+                                <i class="ri-apps-line"></i>
                                 <a href="https://github.com/Michelle-mm/dashboard">Admin Dashboard</a>
                                 <p>A e-commerce platform interface includes different tables, and three extra functions.</p>
                             </div>
                             <div class="projectBox projectBox-transition">
-                                <i class="ri-id-card-line"></i>
-                                <a href="https://github.com/Michelle-mm/meme_generator">Meme Generator</a>
-                                <p>A meme generator that could type in custom texts.</p>
+                                <i class="ri-money-dollar-circle-line"></i>
+                                <a href="https://github.com/Michelle-mm/SplitMoney_App">Money Split App</a>
+                                <p>Money Splitting App helps you record your splits with friends!</p>
                             </div>
                             <div class="projectBox projectBox-transition">
-                                <i class="ri-apps-line"></i>
+                                <i class="ri-edit-2-line"></i>
                                 <a href="https://github.com/Michelle-mm/Note_APP">Note App</a>
                                 <p>A simple note app that includes basic functions, create and delete notes, notes ordering by update-date, etc.</p>
                             </div>
                             <div class="projectBox projectBox-transition">
-                                <i class="ri-news-line"></i>
+                                <i class="ri-film-fill"></i>
                                 <a href="https://github.com/Michelle-mm/movieAPI_miniProject">Movie Searching App</a>
                                 <p>A dynamic movie searching app.</p>
                             </div>
@@ -158,7 +158,7 @@
                         <li><i class="fa fa-phone social-icon" style="font-size: 1.3rem; margin: 0 3px 0 0;"></i>Phone: (+886) 0975733912</li>
                         <li><i class="ri-mail-line social-icon"></i><span class="emailBtn" style="cursor: pointer;">Email: rilakkuma71945@gmail.com</span></li>
                         <li><i class="ri-github-fill social-icon"></i> Github: <a href="https://github.com/Michelle-mm">Michelle-mm</a></li>
-                        <li><i class="ri-linkedin-box-line social-icon"></i>LinkedIn <a href="https://www.linkedin.com/in/%E6%80%9D%E8%BE%B0-%E8%91%89-47068830a/">葉思辰MichelleYeh</a></li>
+                        <li><i class="ri-linkedin-box-line social-icon"></i>LinkedIn <a href="https://www.linkedin.com/in/%E6%80%9D%E8%BE%B0-%E8%91%89-485066319/">葉思辰MichelleYeh</a></li>
                     </ul>
                 </div>
                 <div class="mainBottom copyrightBG">
