--- a/projectPage/projects.html
+++ b/projectPage/projects.html
@@ -45,7 +45,7 @@
                     </ul>
                     <div class="social-icons">
                         <button class="sideBarSocialIcon emailBtn"><i class="ri-mail-line"></i></button>
-                        <a href="https://www.linkedin.com/in/%E6%80%9D%E8%BE%B0-%E8%91%89-47068830a/" class="sideBarSocialIcon"><i class="ri-linkedin-box-line"></i></a>
+                        <a href="https://www.linkedin.com/in/%E6%80%9D%E8%BE%B0-%E8%91%89-485066319/" class="sideBarSocialIcon"><i class="ri-linkedin-box-line"></i></a>
                         <a href="https://github.com/Michelle-mm" class="sideBarSocialIcon"><i class="ri-github-fill "></i></a>
                     </div> 
                 </div>
@@ -64,7 +64,12 @@
                         <div class="projectImgBox"><a href="https://github.com/Michelle-mm/dashboard"><img class="projectImg" src="../imgs/dashboard1.JPG" width="180px" height="120px"/></a></div>
                     </div>
                     <div class="project">
-                        <h3 class="projectTitle"><a href="https://github.com/Michelle-mm/meme_generator">Meme Generator</a></h3>
+                        <h3 class="projectTitle"><a href="https://github.com/Michelle-mm/SplitMoney_App">Money Split App</a></h3>
+                        <p class="projectDetail">This is an responsive app that can record your splits, create your friend list, set your favorite theme color.</p>
+                        <div class="projectImgBox"><a href="https://github.com/Michelle-mm/SplitMoney_App"><img class="projectImg" src="../imgs//splitApp-home-lg.JPG" width="180px" height="120px"/></a></div>
+                    </div>
+                    <div class="project">
+                        <h3 class="projectTitle"><a href="https://github.com/Michelle-mm/meme_generator">Money Split App</a></h3>
                         <p class="projectDetail">A meme generator that could type in custom texts.</p>
                         <div class="projectImgBox"><a href="https://github.com/Michelle-mm/meme_generator"><img class="projectImg" src="../imgs//memeGenerator.JPG" width="180px" height="120px"/></a></div>
                     </div>
