update resume.pdf, update styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./imgs/myLogoIcon.jpeg" type="image">
+    <link rel="icon" href="./imgs/mylogo.jpg" style="rotate:45deg;" type="image">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./sidebar.css">
     <link rel="stylesheet" href="./topNavbar.css">
@@ -36,8 +36,9 @@
                     <div class="webTitle">
                         <a href="#">
                             <h3>Portfolio</h3>
-                            <p>By MichelleYeh</p>
+                            <p>By Michelle<span>Yeh</span></p>
                         </a>
+                        <img class="mylogo" src="./imgs/myLogo-Nobg.PNG" alt="mylogo" width="300" height="300">
                     </div>
                     <ul class="sideBar">
                         <li id="closeBtn"><span class="material-symbols-outlined closeBtn">close</span></li>
@@ -105,7 +106,7 @@
                         <p class="aboutHeader">Experience --- <span>UIUC Intern:</span></p>
                         <p class="aboutContent">&nbsp;&nbsp;I completed a one-month internship in 
                             <a href="https://ahs.illinois.edu/jan">
-                                <span>Professor Jan's Rehabilitation 
+                                <span class="uiuc">Professor Jan's Rehabilitation 
                                 Engineering Research Lab at UIUC.</span>
                             </a>
                             Our group analysized how the elastophy and ultrasound image of human ham 
