--- a/projectPage/projects.html
+++ b/projectPage/projects.html
@@ -32,8 +32,9 @@
                     <div class="webTitle">
                         <a href="../index.html">
                             <h3>Portfolio</h3>
-                            <p>By MichelleYeh</p>
+                            <p>By Michelle<span>Yeh</span></p>
                         </a>
+                        <img class="mylogo" src="../imgs/myLogo-Nobg.PNG" alt="mylogo" width="300" height="300">
                     </div>
                     <ul class="sideBar">
                         <li id="closeBtn"><span class="material-symbols-outlined closeBtn">close</span></li>
