--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./imgs/mylogo.jpg" style="rotate:45deg;" type="image">
+    <link rel="icon" href="./imgs/myLogo-Nobg.PNG" style="rotate:45deg;" type="image">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./sidebar.css">
     <link rel="stylesheet" href="./topNavbar.css">
