--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <nav class="topNav">
                 <ul class="topNavBar">
-                    <li><a href="#" class="imgAddr"><img id="navImg" src="./imgs/Cinna.jpg" alt="myPhoto" width="60px" height="50px"></a></li>
+                    <li><a href="#" class="imgAddr"><img id="navImg" src="./imgs/myLogo-Nobg.PNG" alt="myPhoto" width="60px" height="50px"></a></li>
                     <li><a href="#">Home</a></li>
                     <li><a href="./projectPage/projects.html">Projects</a></li>
                     <li><a href="#contact">Contact Me</a></li>
