--- a/projectPage/projects.html
+++ b/projectPage/projects.html
@@ -70,7 +70,7 @@
                         <div class="projectImgBox"><a href="https://github.com/Michelle-mm/SplitMoney_App"><img class="projectImg" src="../imgs//splitApp-home-lg.JPG" width="180px" height="120px"/></a></div>
                     </div>
                     <div class="project">
-                        <h3 class="projectTitle"><a href="https://github.com/Michelle-mm/meme_generator">Money Split App</a></h3>
+                        <h3 class="projectTitle"><a href="https://github.com/Michelle-mm/meme_generator">Meme Generator</a></h3>
                         <p class="projectDetail">A meme generator that could type in custom texts.</p>
                         <div class="projectImgBox"><a href="https://github.com/Michelle-mm/meme_generator"><img class="projectImg" src="../imgs//memeGenerator.JPG" width="180px" height="120px"/></a></div>
                     </div>
