--- a/index.html
+++ b/index.html
@@ -136,17 +136,17 @@
                             <div class="projectBox projectBox-transition">
                                 <i class="ri-money-dollar-circle-line"></i>
                                 <a href="https://github.com/Michelle-mm/SplitMoney_App">Money Split App</a>
-                                <p>Money Splitting App helps you record your splits with friends!</p>
+                                <p>Money Splitting App helps you record your splits with friends! Easy and Clean interface, simple backend function using MERN</p>
                             </div>
                             <div class="projectBox projectBox-transition">
                                 <i class="ri-edit-2-line"></i>
                                 <a href="https://github.com/Michelle-mm/Note_APP">Note App</a>
-                                <p>A simple note app that includes basic functions, create and delete notes, notes ordering by update-date, etc.</p>
+                                <p>A simple note app that includes basic functions, CRUD, notes ordering by update-date, Firebase data storage, etc.</p>
                             </div>
                             <div class="projectBox projectBox-transition">
                                 <i class="ri-film-fill"></i>
                                 <a href="https://github.com/Michelle-mm/movieAPI_miniProject">Movie Searching App</a>
-                                <p>A dynamic movie searching app.</p>
+                                <p>Integrate OMDB API, A dynamic movie searching app.</p>
                             </div>
                         </div>
                     </div>
