--- a/projectPage/projects.html
+++ b/projectPage/projects.html
@@ -71,14 +71,14 @@
                     </div>
                     <div class="project">
                         <h3 class="projectTitle"><a href="https://github.com/Michelle-mm/meme_generator">Meme Generator</a></h3>
-                        <p class="projectDetail">A meme generator that could type in custom texts.</p>
+                        <p class="projectDetail">Integrating API generate meme that could type in custom texts.</p>
                         <div class="projectImgBox"><a href="https://github.com/Michelle-mm/meme_generator"><img class="projectImg" src="../imgs//memeGenerator.JPG" width="180px" height="120px"/></a></div>
                     </div>
                     <div class="project projectNote">
                         <h3 class="projectTitle">
                             <a href="https://github.com/Michelle-mm/Note_APP">Note App</a>
                         </h3>
-                        <p class="projectDetail">A simple note app that includes basic functions, create and delete notes, notes ordering by update-date, etc.</p>
+                        <p class="projectDetail">A simple note app that includes basic functions, CRUD, notes ordering by update-date, Firebase data storage, etc.</p>
                         <div class="projectImgBox"><a href="https://github.com/Michelle-mm/Note_APP"><img class="projectImg" src="../imgs//noteapp2.JPG" width="180px" height="120px"/></a></div>
                     </div>
                     <div class="project">
@@ -87,6 +87,13 @@
                         </h3>
                         <p class="projectDetail">A dynamic movie searching app.</p>
                         <div class="projectImgBox"><a href="https://github.com/Michelle-mm/movieAPI_miniProject"><img class="projectImg" src="../imgs//movieApi.JPG" width="180px" height="120px"/></a></div>
+                    </div>
+                    <div class="project">
+                        <h3 class="projectTitle">
+                            <a href="https://github.com/Michelle-mm/movieAPI_miniProject">UIUC intern Result Present</a>
+                        </h3>
+                        <p class="projectDetail">Showcase the result of the project I participated in UIUC as intern. Introduce the project with model-test-run function</p>
+                        <div class="projectImgBox"><a href="./"><img class="projectImg" src="../imgs/showuiuc-1.png" width="180px" height="120px"/></a></div>
                     </div>
                     <div class="project addNewProject">
                         <h3 class="projectTitle">
