modify display, add content, project detail window

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <title>MY Portfolio</title>
+    <title>MY Portfolio Website</title>
 </head>
 <body>
     <div class="bodyContent">
         <header>
             <nav class="topNav">
-                <ul class="topNavBar">
-                    <li><a href="#" class="imgAddr"><img id="navImg" src="./imgs/myLogo-Nobg.PNG" alt="myPhoto" width="60px" height="50px"></a></li>
+                <ul class="topNav-ul">
+                    <li class="imgAddr"><a href="#"><img id="navImg" src="./imgs/myLogo-Nobg.PNG" alt="myPhoto" width="60px" height="50px"></a></li>
                     <li><a href="#">Home</a></li>
                     <li><a href="./projectPage/projects.html">Projects</a></li>
                     <li><a href="#contact">Contact Me</a></li>
@@ -32,7 +32,7 @@
 
         <main>
             <nav class="sideNav">
-                <div class="sideBarContainer">
+                <!-- <div class="sideBarContainer"> -->
                     <div class="webTitle">
                         <a href="#">
                             <h3>Portfolio</h3>
@@ -40,8 +40,8 @@
                         </a>
                         <img class="mylogo" src="./imgs/myLogo-Nobg.PNG" alt="mylogo" width="300" height="300">
                     </div>
-                    <ul class="sideBar">
-                        <li id="closeBtn"><span class="material-symbols-outlined closeBtn">close</span></li>
+                    <ul class="sideBar-ul">
+                        <li class="closeBtn"><span class="material-symbols-outlined">close</span></li>
                         <li class="sideBarLst"><a href="#">Home</a></li>
                         <li class="sideBarLst"><a href="./projectPage/projects.html">Projects</a></li>
                         <li class="sideBarLst"><a href="#contact">Contact Me</a></li>
@@ -53,7 +53,7 @@
                         <a href="https://www.linkedin.com/in/%E6%80%9D%E8%BE%B0-%E8%91%89-485066319/" class="sideBarSocialIcon sidebarIconAnimate"><i class="ri-linkedin-box-line sideBarSocialIcon sidebarIconAnimate"></i></a>
                         <a href="https://github.com/Michelle-mm" class="sideBarSocialIcon sidebarIconAnimate"><i class="ri-github-fill "></i></a>
                     </div> 
-                </div>
+                <!-- </div> -->
             </nav>
             <div class="mainContent">
                 <div class="confirmCopyBox">
